Fix covid title alignment

--- a/src/scss/includes/panels/covid.scss
+++ b/src/scss/includes/panels/covid.scss
@@ -1,7 +1,7 @@
 .covid19 {
   .poi_panel__sub_block__title {
     cursor: default;
-    display: flex;
+    display: block;
   }
 
   &-tag {
